--- a/HomeCss.css
+++ b/HomeCss.css
@@ -1,6 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Oswald:wght@200..700&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+
 * {
-  font-family: "Poppins", sans-serif;
+  font-family: "Poppins";
   padding: 0%;
   margin: 0%;
   box-sizing: border-box;
@@ -20,7 +22,8 @@
   background-color: var(--orange_color);
   color: var(--white_color);
   font-size: 2rem;
-  font-weight: 700;
+  letter-spacing: 30px;
+  font-weight: 500;
   padding: 20px;
   text-align: center;
 }
@@ -41,7 +44,7 @@ header {
   justify-content: space-between;
   align-items: center;
   font-size: 1rem;
-  box-shadow: rgba(20, 20, 216, 0.2) 0px 7px 29px 0px;
+  /* border: #000000 1px solid; */
 }
 
 /* ----------  nav logo css ------------ */
@@ -115,6 +118,69 @@ header {
     display: none;
   } */
 
-section {
-  height: 1000px;
+/* ------------   hero_section css ------------ */
+#hero_section {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  /* padding: 70px 0px 0px 0px; */
+  /* border: #000000 1px solid; */
+}
+
+.hero_text_container {
+  padding: 35px;
+  height: 400px;
+  width: 600px;
+  /* border: #000000 1px solid; */
+}
+
+.hero_text_container .title {
+  margin-top: 45px;
+  color: var(--black_color);
+  font-size: 48px;
+  font-weight: 600;
+  /* border: #da0f0f 1px solid; */
+}
+
+.hero_text_container span {
+  color: var(--orange_color);
+  /* border: #da0f0f 1px solid; */
+}
+
+.hero_text_container .description {
+  margin-top: 10px;
+  color: var(--black_color);
+  font-size: 1rem;
+  /* border: #c5d81a 1px solid; */
+}
+.hero_img_container {
+  background: rgb(255, 75, 30);
+  background: radial-gradient(
+    circle,
+    rgba(255, 75, 30, 1) 0%,
+    rgba(255, 180, 162, 1) 24%,
+    rgba(255, 213, 203, 1) 32%,
+    rgba(255, 242, 239, 1) 39%,
+    rgba(255, 255, 255, 1) 48%
+  );
+  /* border: #000000 1px solid; */
+}
+.hero_img_container img {
+  height: 500px;
+  width: 580px;
+  /* border: #000000 1px solid; */
+}
+
+/* ------------   sepration section css ------------ */
+
+#sepration {
+  /* border: #000000 1px solid; */
+  height: 100px;
+  width: 100%;
+  background: rgb(0, 0, 0);
+  background: linear-gradient(
+    4deg,
+    rgba(0, 0, 0, 1) 49%,
+    rgba(255, 255, 255, 1) 49%
+  );
 }
