--- a/HomeCss.css
+++ b/HomeCss.css
@@ -7,6 +7,7 @@
   margin: 0%;
   box-sizing: border-box;
   scroll-behavior: smooth;
+  /* user-select:none; */
 }
 
 :root {
@@ -253,6 +254,7 @@ header {
   background: var(--black_color);
   /* background-color:aqua; */
   padding: 0px 80px 80px 80px;
+
 }
 .Services_text_container {
   /* border: #fa8500 1px solid; */
@@ -331,4 +333,156 @@ header {
     var(--black_color) 49%,
     var(--white_color) 50%
   );
+}
+
+/* ------------   Contact Form section css ------------ */
+#Contact_section {
+  padding: 0px 20px 70px 20px;
+  background-color: var(--white_color);
+}
+.Contact_items {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.Con_form_box2 label {
+  width: 34vw;
+  height: 7vh;
+  font-size: 1rem;
+  margin-bottom: 65px;
+}
+.Con_form_box2 input {
+  width: 34vw;
+  height: 42px;
+  border-radius: 30px;
+  border: 1px var(--black_color) solid;
+  margin-top: 10px;
+  margin-bottom: 15px;
+}
+#Message_box {
+  width: 34vw;
+  height: 42px;
+  border-radius: 30px;
+  border: 1px var(--black_color) solid;
+  margin-top: 10px;
+  margin-bottom: 15px;
+}
+
+.Con_form_box2 input::placeholder {
+  font-size: 1rem;
+  color: rgb(199, 187, 187);
+}
+
+.Contact_text_container {
+  /* border: #fa8500 1px solid; */
+  text-align: right;
+  line-height: 60px;
+  width: 50%;
+}
+.Contact_text_container h2 {
+  color: var(--orange_color);
+  font-size: 80px;
+  font-weight: 600;
+}
+.Contact_text_container p {
+  margin-top: 25px;
+  line-height: 30px;
+  font-size: 20px;
+  color: var(--black_color);
+}
+
+/* ///////////////////////// footer  ///////////////////////// */
+
+.foot-panel1 {
+  height: 50px;
+  width: 100%;
+  background-color: var(--black_color);
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+.foot-panel1 a {
+  font-size: 16px;
+  text-decoration: none;
+  color: var(--white_color);
+}
+
+.foot-panel2 {
+  border-top: 1px solid var(--black_color);
+  height: 350px;
+  width: 100%;
+  background-color: var(--white_color);
+  color: var(--black_color);
+  display: flex;
+  justify-content: space-evenly;
+  font-size: 14px;
+}
+
+.foot-panel2 ul {
+  margin-top: 20px;
+}
+.foot-panel2 ul p {
+  font-size: 25px;
+  font-weight: 500;
+  margin-bottom: 30px;
+}
+
+.foot-panel2 ul a {
+  color: var(--black_color);
+  text-decoration: none;
+  margin-bottom: 25px;
+  display: block;
+  font-size: 16px;
+}
+
+.foot-panel2 ul a:hover {
+  cursor: pointer;
+  border-bottom: 2px solid var(--orange_color);
+  transition: all .13s ease-in-out;
+}
+
+.foot-panel3 {
+  width: 100%;
+  background: linear-gradient(
+    90deg,
+    rgb(231, 231, 231) 0%,
+    rgb(75, 74, 74) 24%,
+    rgb(0, 0, 0) 57%,
+    rgb(75, 74, 74) 82%,
+    rgb(231, 231, 231) 100%
+  );
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.foot-panel3 img {
+width: 13%;
+  background-size: cover;
+}
+
+.foot-panel4 {
+  height: 80px;
+  width: 100%;
+  background-color: var(--white_color);
+  color: var(--black_color);
+  font-size: 14px;
+  text-align: center;
+}
+
+.pages {
+  font-size: 12px;
+  padding-top: 25px;
+
+}
+
+.pages a {
+  color: var(--black_color);
+  text-decoration: none;
+}
+
+.copyright {
+  margin-top: 5px;
+  padding-bottom: 15px;
 }
