--- a/ServicesCss.css
+++ b/ServicesCss.css
@@ -14,6 +14,8 @@
   --black_color: #000000;
   --white_color: #ffffff;
   --orange_color: #ff5100;
+  --white_glow_color: #ff51009b;
+  --black_glow_color: #3d3c3c9b;
   /* --orange_color: #ff0000; */
   --black_hover_color: #242323;
   --orange_hover_color: #fa8500;
@@ -219,16 +221,17 @@ header {
   }
   .Services_card_img {
     margin-left: 10px;
-    background: radial-gradient(
+    /* background: radial-gradient(
       circle,
       rgb(0, 0, 0) 0%,
       rgb(75, 74, 74) 20%,
       rgb(158, 158, 158) 30%,
       rgb(255, 253, 253) 50%
-    );
+    ); */
     /* border: #fa8500 1px solid; */
   }
   .Services_card_img img {
+    filter: drop-shadow(8px 7px 19px var(--black_glow_color));
     height: 100%;
     width: 100%;
   }
