--- a/HomeCss.css
+++ b/HomeCss.css
@@ -11,6 +11,7 @@
 }
 *::selection{
   background-color: #f45f5f;
+  color: #000000;
 }
 
 :root {
@@ -22,6 +23,12 @@
   --orange_color: #ff5500;
   --black_hover_color: #242323;
   --orange_hover_color: #fa8500;
+  
+  --yellow_color: #f8e9a1;
+  --redies_color: #f76c6c;
+  --sky_blue:#a8d0e6;
+  --blue_color:#374785;
+
 }
 
 /* ----------  nav-upper css ------------ */
