--- a/WorkCss.css
+++ b/WorkCss.css
@@ -17,6 +17,11 @@
   /* --orange_color: #ff0000; */
   --black_hover_color: #242323;
   --orange_hover_color: #fa8500;
+
+  --yellow_color: #f8e9a1;
+  --redies_color: #f76c6c;
+  --sky_blue:#a8d0e6;
+  --blue_color:#374785;
 }
 
 
