--- a/HomeCss.css
+++ b/HomeCss.css
@@ -9,26 +9,25 @@
   scroll-behavior: smooth;
   /* user-select: none; */
 }
-*::selection{
-  background-color: #f45f5f;
-  color: #000000;
+*::selection {
+  background-color: var(--redies_color);
+  color: var(--black_color);
 }
 
 :root {
   --black_color: #000000;
   --white_color: #ffffff;
-  /* --orange_color: #4c00ff; */
+  --orange_color: #374785;
   --white_glow_color: #848181cf;
   --black_glow_color: #3d3c3c9b;
-  --orange_color: #ff5500;
+  /* --orange_color: #ff5500; */
   --black_hover_color: #242323;
   --orange_hover_color: #fa8500;
-  
+
   --yellow_color: #f8e9a1;
   --redies_color: #f76c6c;
-  --sky_blue:#a8d0e6;
-  --blue_color:#374785;
-
+  --sky_blue: #a8d0e6;
+  --blue_color: #374785;
 }
 
 /* ----------  nav-upper css ------------ */
@@ -86,9 +85,10 @@ header {
 /* ----------  nav logo css ------------ */
 
 #nav img {
-  padding-top: 2vh;
+  padding-top: 1vh;
+  padding-left: 2.5vw;
   height: 100%;
-  width: 15vw;
+  width: 27%;
 }
 
 #nav a {
@@ -181,7 +181,7 @@ header {
 
 /* ------------   hero_section css ------------ */
 #hero_section {
-  background-color: var(--white_color);
+  background-color: transparent;
   display: flex;
   align-items: center;
   justify-content: space-around;
@@ -274,7 +274,8 @@ header {
   transition: 0.3s;
 }
 .button:hover {
-  background-color: var(--orange_hover_color);
+  background-color: var(--sky_blue);
+  color: var(--blue_color);
 }
 .button:hover span {
   padding-right: 25px;
@@ -284,7 +285,6 @@ header {
   opacity: 1;
   right: 0;
 }
-
 
 /* ------------------------------------------------------------------------------------------------- */
 
@@ -297,7 +297,7 @@ header {
   background: var(--black_color);
   background: linear-gradient(
     5deg,
-    var(--black_color) 49%,
+    var(--yellow_color) 49%,
     var(--white_color) 50%
   );
 }
@@ -306,35 +306,33 @@ header {
 
 /* ------------   Services section section css ------------ */
 #Services_section {
-  background: var(--black_color);
+  background: var(--yellow_color);
+  color: var(--blue_color);
   /* background-color:aqua; */
   padding: 0px 60px 80px 60px;
 }
 .Services_text_container {
-  /* border: #fa8500 1px solid; */
-  color: var(--white_color);
   line-height: 60px;
   width: 90%;
 }
 .Services_text_container h2 {
   font-size: 80px;
   font-weight: 600;
-  color: var(--white_color);
 }
 .Services_text_container p {
   font-size: 30px;
-  color: var(--white_color);
+  color: var(--blue_color);
 }
 /* ---------------------Services_cards_container-------------------- */
 .Services_cards_container {
-  border: #ffffff 1.5px solid;
+  border: var(--blue_color) 1.5px solid;
   border-radius: 50px;
   margin-top: 70px;
   padding: 30px;
 
   font-size: 23px;
-  background: var(--black_color);
-  color: var(--white_color);
+  background: transparent;
+
   display: flex;
   /* justify-content: space-around; */
 }
@@ -369,11 +367,10 @@ header {
   font-weight: 600;
 }
 .Services_card_text p {
-  color: var(--white_color);
+  /* color: var(--white_color); */
   margin-top: 20px;
   margin-bottom: 20px;
   font-size: 20px;
-  color: var(--white_color);
 }
 
 /* ------------   sepration 2 section css ------------ */
@@ -385,7 +382,7 @@ header {
   background: rgb(0, 0, 0);
   background: linear-gradient(
     175deg,
-    var(--black_color) 49%,
+    var(--yellow_color) 49%,
     var(--white_color) 50%
   );
 }
@@ -554,7 +551,7 @@ width: 13%;
   /* height: 65vh; */
   width: 100%;
   padding: 60px 0px 45px 0px;
-  background-color: var(--black_color);
+  background-color: var(--blue_color);
   color: var(--white_color);
 }
 .footer_items {
@@ -571,11 +568,12 @@ width: 13%;
 .foot_box1_1 {
   /* border: 1px solid#ff5100; */
   height: 34.2vh;
-  width: 19.5vw;
+  width: 100%;
   color: var(--white_color);
   margin-right: 150px;
 }
-.foot_box1_1 ul li a {
+.foot_box1_1 a {
+  font-size: 1rem;
   text-decoration: none;
   color: var(--white_color);
 }
@@ -584,13 +582,13 @@ width: 13%;
   margin-bottom: 22px;
 }
 .social_icons i {
-  margin-left: 15px;
-  margin-right: 15px;
+  margin: 10px 25px 10px 0px;
   color: var(--white_color);
-  font-size: 1.438rem;
+  font-size: 1.3rem;
 }
 
 .footer_box2 {
+  /* justify-content: center; */
   text-align: left;
   width: 75vw;
   /* border: 1px solid#ff5100; */
@@ -603,5 +601,5 @@ width: 13%;
 
 .footer_box2 p {
   color: var(--white_color);
-  font-size: 0.75rem;
+  font-size: 0.80rem;
 }
