--- a/HomeCss.css
+++ b/HomeCss.css
@@ -248,7 +248,7 @@ header {
 
 .button {
   border-radius: 25px;
-  background-color: var(--orange_color);
+  background-color: var(--redies_color);
   border: none;
   color: var(--white_color);
   text-align: center;
@@ -405,6 +405,7 @@ header {
   margin-left: 10px;
 }
 .Con_form_box2 input {
+  padding: 15px;
   min-width: 34vw;
   max-width: 34vw;
   height: 42px;
@@ -414,17 +415,18 @@ header {
   margin-bottom: 15px;
 }
 #Message_box {
+  padding: 15px;
   min-width: 34vw;
   max-width: 34vw;
-  min-height: 42px;
+  min-height: 90px;
   border-radius: 30px;
   border: 1px var(--black_color) solid;
   margin-top: 10px;
   margin-bottom: 15px;
-  overflow: hidden;
+  overflow:hidden;
 }
 
-.Con_form_box2 input::placeholder {
+.Con_form_box2 input #Message_box ::placeholder {
   font-size: 1rem;
   color: rgb(199, 187, 187);
 }
@@ -447,103 +449,8 @@ header {
   color: var(--black_color);
 }
 
-/* ///////////////////////// footer option 1 ///////////////////////// */
 
-/* .foot-panel1 {
-  height: 50px;
-  width: 100%;
-  background-color: var(--black_color);
-  display: flex;
-  align-items: center;
-  justify-content: space-evenly;
-}
-
-.foot-panel1 a {
-  font-size: 16px;
-  text-decoration: none;
-  color: var(--white_color);
-}
-
-.foot-panel2 {
-  border-top: 1px solid var(--black_color);
-  height: 350px;
-  width: 100%;
-  background-color: var(--white_color);
-  color: var(--black_color);
-  display: flex;
-  justify-content: space-evenly;
-  font-size: 14px;
-}
-
-.foot-panel2 ul {
-  margin-top: 20px;
-}
-.foot-panel2 ul p {
-  font-size: 25px;
-  font-weight: 500;
-  margin-bottom: 30px;
-}
-
-.foot-panel2 ul a {
-  color: var(--black_color);
-  text-decoration: none;
-  margin-bottom: 25px;
-  display: block;
-  font-size: 16px;
-}
-
-.foot-panel2 ul a:hover {
-  cursor: pointer;
-  border-bottom: 2px solid var(--orange_color);
-  transition: all .13s ease-in-out;
-}
-
-.foot-panel3 {
-  width: 100%;
-  background: linear-gradient(
-    90deg,
-    rgb(231, 231, 231) 0%,
-    rgb(75, 74, 74) 24%,
-    rgb(0, 0, 0) 57%,
-    rgb(75, 74, 74) 82%,
-    rgb(231, 231, 231) 100%
-  );
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-}
-
-.foot-panel3 img {
-width: 13%;
-  background-size: cover;
-}
-
-.foot-panel4 {
-  height: 80px;
-  width: 100%;
-  background-color: var(--white_color);
-  color: var(--black_color);
-  font-size: 14px;
-  text-align: center;
-}
-
-.pages {
-  font-size: 12px;
-  padding-top: 25px;
-
-}
-
-.pages a {
-  color: var(--black_color);
-  text-decoration: none;
-}
-
-.copyright {
-  margin-top: 5px;
-  padding-bottom: 15px;
-} */
-
-/* ///////////////////////// footer option 2 ///////////////////////// */
+/* ///////////////////////// footer  ///////////////////////// */
 
 /* ------------- footer_section  ----------- */
 #footer_section {
@@ -570,7 +477,7 @@ width: 13%;
   height: 34.2vh;
   width: 100%;
   color: var(--white_color);
-  margin-right: 150px;
+  margin-right: 100px;
 }
 .foot_box1_1 a {
   font-size: 1rem;
